# equity-dlt-pipeline

./: .gitignore  Dockerfile  README.md  cronjob.yml  docker-compose.yml  gcs_storage_pipeline.py  pyproject.toml  script.sh  stockdata_pipeline.py  storage_pipeline.py  yfinance_pipeline.py
.dlt/: config.toml
.github/workflows/: deploy.yml  print-action.yml
